# mqtt-m0s-switch

./: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  config_example.h  flash_prog_cfg.ini  lwipopts_user.h  main.c  mbedtls_sample_config.h  proj.conf
